spacing issues

--- a/cabinFever/style.scss
+++ b/cabinFever/style.scss
@@ -10,9 +10,9 @@ html {
 h1 {
     font-family: $primary-font;
     font-weight: 800;
-    font-size: 3rem;
+    font-size: 48px;
     @media (min-width: 1025px) {
-        font-size: 4rem;
+        font-size: 64px;
     }
     .title {
         color: $primary-color;
@@ -26,9 +26,9 @@ h1 {
 p {
     font-family: $secondary-font;
     font-weight: 100;
-    font-size: 1rem;
+    font-size: 16px;
     @media (min-width: 1025px){
-        font-size: 1.5rem;
+        font-size: 24px;
     }
 }
 
@@ -98,28 +98,28 @@ h2 {
 
 .cabinBody{
     font-family: $secondary-font;
-    font-size: 2rem;
+    font-size: 32px;
     line-height: .9;
     @media (min-width: 1025px) {
-        font-size: 1.5rem;
+        font-size: 24px;
     }
 }
 
 .cabinFever {
-    font-size: 4rem;
+    font-size: 64px;
     @media (min-width:1025px) {
-        font-size: 8rem;
+        font-size: 128px;
     }
 }
 
 .navbar {
     background: #333;
     height: 42px;
-    min-height: 3rem;
+    min-height: 48px;
     font-weight: 600;
     box-shadow: 0px 1px 3px #000;
     justify-content: flex-end;
-    font-size: 1rem;
+    font-size: 16px;
     z-index: 9999;
 }
 
@@ -133,7 +133,7 @@ h2 {
     top: 0;
     font-weight: 900; 
     font-family: 'english-grotesque', sans-serif; 
-    font-size: 2rem;
+    font-size: 32px;
     color: #ff3b6e;
     vertical-align: middle;
 }
@@ -158,9 +158,9 @@ h2 {
 }
 
 h3 {
-    font-size: 1rem;
+    font-size: 16px;
     @media (min-width: 1000px) {
-        font-size: 2rem;
+        font-size: 32px;
     }
 }
 #section1{
@@ -206,6 +206,13 @@ h3 {
     .layer2-text {
         z-index: 5;
         background: transparent;
+        line-height: 16px;
+        @media (min-width: 1280px) {
+            line-height: 25px;
+        }
+        @media (min-width: 1370px) {
+            line-height: 35px;
+        }
     }
 }
 
@@ -240,42 +247,96 @@ a:hover {
 
 .headshot1 {
     border-radius: 50%;
-    height: 100px;
-    width: 100px;
+    height: 50px;
+    width: 50px;
     background-image: url('assets/Headshot_001.jpg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    @media (min-width: 1440px) {
+        height: 100px;
+        width: 100px;
+    }
 }
 
 .headshot2 {
         border-radius: 50%;
-        height: 100px;
-        width: 100px;
+        height: 50px;
+        width: 50px;
         background-image: url('assets/Headshot_002.jpg');
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
+        @media (min-width: 1440px) {
+            height: 100px;
+            width: 100px;
+        }
 }
     
 .headshot3 {
     border-radius: 50%;
-    height: 100px;
-    width: 100px;
+    height: 50px;
+    width: 50px;
     background-image: url('assets/Headshot_003.jpg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    @media (min-width: 1440px) {
+        height: 100px;
+        width: 100px;
+    }
 }
     
 .headshot4 {
     border-radius: 50%;
-    height: 100px;
-    width: 100px;
+    height: 50px;
+    width: 50px;
     background-image: url('assets/Headshot_004.jpg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    @media (min-width: 1440px) {
+        height: 100px;
+        width: 100px;
+    }
+}
+
+.aboutUs {
+    font-size: 10px;
+    @media (min-width: 1025px) {
+        font-size: 16px;
+    }
+}
+
+.kegs {
+    max-height: 400px;
+    background-image: url('assets/Kegs.jpg');
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    height: 400px;
+}
+
+input {
+    width: 250px;
+    @media (min-width: 1025px) {
+        width: 400px;
+    }
+}
+
+select {
+    width: 250px;
+    @media (min-width: 1025px) {
+        width: 400px;
+    }
+}
+
+textarea {
+    width: 250px;
+    height: 100px;
+    @media (min-width: 1025px) {
+        width: 400px;
+    }
 }
     // background-image: url('assets/Headshot_001.jpg');
     // background-position: center;
